# news-scrap-image-url-fix

./: .gitignore  README.md  pyproject.toml  run.py
log/2023-11-08 15-52-37/: naver_urls_still_without_image_url.txt  naver_wrong_urls.txt
log/2023-11-08 15-53-02/: daum_urls_still_without_image_url.txt  daum_wrong_urls.txt
log/2023-11-08 15-53-57/: daum_urls_still_without_image_url.txt  daum_wrong_urls.txt
log/2023-11-08 16-21-24/: naver_urls_still_without_image_url.txt  naver_wrong_urls.txt
query/: queries.py
src/: run.py  settings.py  test.ipynb  utils.py
