[tool.poetry]
name = "news-scrap"
version = "0.1.0"
description = ""
authors = ["ruo"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
requests = "^2.31.0"
selenium = "^4.15.2"
jupyterlab = "^4.0.8"
webdriver-manager = "^4.0.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
